--- a/Day01/Day01.ipynb
+++ b/Day01/Day01.ipynb
@@ -11,14 +11,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "96196ad9",
-   "metadata": {},
-   "source": [
-    "# Sample"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "5bc12635",
@@ -44,34 +36,77 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e83a81e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"input\") as f:\n",
+    "    data = f.read().strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "8dc7b0cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_ndarray(lines):\n",
+    "    int_lists = (map(int, lines.split(\"\\n\"))\n",
+    "                 for lines in lines.strip().split(\"\\n\\n\"))\n",
+    "    return np.asarray([sum(line) for line in int_lists], dtype=np.int32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c6e343b4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24000\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "24000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nda = to_ndarray(sample)\n",
+    "nda.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "328284f8",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "45000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lines = (map(int, lines.split(\"\\n\"))\n",
-    "             for lines in sample.strip().split(\"\\n\\n\"))\n",
-    "l = np.asarray([sum(line) for line in lines], dtype=np.int32)\n",
-    "print(l.max())\n",
-    "l.sort()\n",
-    "l[-3:].sum()"
+    "nda.sort()\n",
+    "nda[-3:].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96196ad9",
+   "metadata": {},
+   "source": [
+    "# Sample"
    ]
   },
   {
@@ -84,45 +119,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "1d00db01",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "69281\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "69281"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nda = to_ndarray(data)\n",
+    "nda.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e784a82c",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "201524"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open(\"input-01\") as f:\n",
-    "    lines = (map(int, lines.split(\"\\n\"))\n",
-    "             for lines in f.read().strip().split(\"\\n\\n\"))\n",
-    "l = np.asarray([sum(line) for line in lines], dtype=np.int32)\n",
-    "print(l.max())\n",
-    "l.sort()\n",
-    "l[-3:].sum()"
+    "nda.sort()\n",
+    "nda[-3:].sum()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e784a82c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
